--- a/project_2/docum1.html
+++ b/project_2/docum1.html
@@ -33,11 +33,16 @@
         }
 
         #sec1{
-            background-color: rgba(127, 255, 212, 0.221);
+            background-image: url("https://media.istockphoto.com/id/1371256107/photo/the-turquoise-wave-water-background-of-summer-beach-at-the-seashore-and-beach-summer-pattern.jpg?s=1024x1024&w=is&k=20&c=tweNPQfznbG7UCRgungf9182SmjxdxJsgV3asvbg0Nw=");
         }
 
         #sec2{
             background-color: rgba(127, 255, 212, 0.221);
+        }
+
+        #backbutton{
+            background-color: #0921f3;
+            color: rgb(243, 243, 9);
         }
     </style>
 </head>
@@ -76,6 +81,8 @@
 
     <footer style="background-color: red;">
         <p>&copy; 2023 Sea Beach Documentary. All rights reserved.</p>
+        <button id="backbutton"><a href="seabeach.html" id="backbutton">--BACK</a></button>
+        
     </footer>
 
 </body>
