--- a/project_2/grassland.html
+++ b/project_2/grassland.html
@@ -52,6 +52,7 @@
 <footer>
     <h5>&copy; copyright claimed </h5>
     <a href="index.html">BACK TO HOME</a>
+    <div align="center"><a href="docum4.html" style="color: darkmagenta;">Documantry</a></div>
 </footer>
 </body>
 
