--- a/project_2/index.html
+++ b/project_2/index.html
@@ -11,11 +11,12 @@
     <div id="heading_color">
         <h1 ><strong>Image gallary</strong></h1>
     </div>
-    <nav id="error_color">
+    <div id="error_color">
+    
         <div align="right">
            <a href="error.html" target="_blank">about</a>
         </div>
-    </nav>
+    </div>
     <div align="center" id="search_color">
         <form >
            <input type="search" placeholder="search here">
