--- a/errorpage.html
+++ b/errorpage.html
@@ -21,19 +21,19 @@
 <body>
     <header>
         <div id="header_div">
-            header
+            header section
         </div>
     </header>
 
     <main>
         <div id="main_div">
-           main
+           main section
         </div>
     </main>
 
     <footer>
         <div id="footer_div">
-            footer
+            footer section
         </div>
     </footer>
 </body>
