error page addition

--- a/project_3/errorpage.html
+++ b/project_3/errorpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>error page_</title>
+    
     <style>
         #header_div{
             background-color: coral;
@@ -29,6 +30,7 @@
         <div id="main_div">
            main section
         </div>
+        <i class="fa-solid fa-gears"></i>
     </main>
 
     <footer>
