--- a/project_4/login.html
+++ b/project_4/login.html
@@ -11,7 +11,8 @@
         }
       header{
         height: 54px;
-        background-color: cornflowerblue;
+        background-image: url("https://c4.wallpaperflare.com/wallpaper/751/338/401/anime-anime-girls-white-hair-long-hair-wallpaper-preview.jpg");
+        background-repeat: no-repeat;
       }
 
     #account{
@@ -52,7 +53,7 @@
     
    .body_img{
     height: 530px;
-    background-image: url("https://media.istockphoto.com/id/1169630303/photo/blue-textured-background.webp?b=1&s=170667a&w=0&k=20&c=tI2xFhXqXFqMM0IvxSYY3F7LIwv450h2ch3yD-lZ9HU=");
+    background-image: url("https://c4.wallpaperflare.com/wallpaper/826/153/158/artwork-anime-landscape-painting-wallpaper-preview.jpg");
     background-repeat: no-repeat;
     background-size: 1280px;
 
@@ -64,7 +65,8 @@
     left: 70%;
     height: 430px;
     width: 360px;
-    background-color: antiquewhite;
+    background-color: transparent;
+    backdrop-filter: blur(20px);
     border: 2px black solid;
     border-radius: 8px;
    }
